src/test/ui/parser/issues/issue-15980.stderr
error: expected identifier, found keyword `return`
  --> $DIR/issue-15980.rs:10:13
   |
LL |         Err(ref e) if e.kind == io::EndOfFile {
   |                                 ------------- while parsing this struct
...
LL |             return
   |             ^^^^^^ expected identifier, found keyword
   |
help: escape `return` to use it as an identifier
   |
LL |             r#return
   |             ++

error: expected one of `!`, `.`, `::`, `=>`, `?`, or an operator, found `{`
  --> $DIR/issue-15980.rs:6:47
   |
LL |         Err(ref e) if e.kind == io::EndOfFile {
   |                                               ^ expected one of `!`, `.`, `::`, `=>`, `?`, or an operator
   |
help: try adding a fat arrow here
   |
LL |         Err(ref e) if e.kind == io::EndOfFile => {
   |                                               ++

error: aborting due to 2 previous errors

